feat: fix for aws pipeline